# spec-hackathon-II

./: CLAUDE.md  rough.html
.claude/: skills.rar
.claude/skills/better-auth/: SKILL.md
.claude/skills/chatkit/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/documentation/: SKILL.md
.claude/skills/fastapi-backend/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/mcp/: SKILL.md
.claude/skills/openai-agents/: SKILL.md
.claude/skills/testing/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  run_migration.py  run_migration_fix.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_create_user_table.py  002_create_task_and_related_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: health.py  projects.py  router.py  tags.py  tasks.py  users.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  project.py  tag.py  task.py  task_tag.py  user.py
backend/app/schemas/: __init__.py  common.py  project.py  tag.py  task.py  user.py
backend/app/services/: __init__.py  project_service.py  tag_service.py  task_service.py
backend/migrations/: alter_user_id_to_string.sql
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_full_workflow.py  test_health.py  test_task_filtering.py  test_tasks_api.py  test_users_api.py
backend/tests/unit/: test_security.py  test_task_service.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/Components/: index.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/features/: index.ts
frontend/hooks/: index.ts  useInView.ts  useMousePosition.ts  useScrollPosition.ts
frontend/lib/: auth-client.ts  auth.ts
frontend/lib/api/: auth.ts  (+4 more)
frontend/styles/: design-tokens.css
frontend/types/: landing.ts
specs/001-frontend-implementation/: plan.md  spec.md  tasks.md
specs/002-engaging-landing-pages/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-backend-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-full-stack-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-frontend-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+118 files in other folders)
